# extern-os

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  i686-unknown-unknown.json
.cargo/: config
src/: a20.rs  bda.rs  debug.rs  entry.rs  error.rs  gdt.rs  interrupt.rs  io.rs  kernel.rs  lib.rs  libc.rs  prelude.rs  rlibc.rs  support.rs  table.rs  terminal.rs  vga.rs
src/alloc/: Cargo.toml  lib.rs
src/bios/: data_area.rs  mod.rs
src/drivers/: mod.rs
src/drivers/ps2/: command.rs  mod.rs
src/io/: mod.rs  port.rs
src/loader/: boot.s
src/table/: mod.rs
src/table/gdt/: access.rs  flags.rs  mod.rs  setup.rs
src/vga/: cursor.rs  mod.rs  style.rs
src/x86/: interrupt.rs  kernel.rs  mod.rs  mode.rs  protected.rs
