[package]
name = "extern-os"
version = "0.1.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]

build = "build.rs"

[lib]
crate-type = ["staticlib"]
path = "src/kernel.rs"

[dependencies]
rlibc = "1.0.0"
extern-os-allocator = { path = "src/alloc" }

[build-dependencies]
nasm-rs = "0.0.6"

[profile.dev]
panic = 'abort'

